# WiFiAudioStreaming-Desktop

./: .gitignore  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  WFAS_PROTOCOL.md  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
.github/workflows/: release.yml
docs/: VIRTUAL_MIC_MACOS.md  VIRTUAL_MIC_WINDOWS.md
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/: AppDebug.kt  AudioEngine.kt  Changelog.kt  CliArgs.kt  CliMode.kt  CliPathInstaller.kt  CliVisualizer.kt  ConfigCli.kt  ConfigManager.kt  ConfigPaths.kt  CryptoManager.kt  DebugHud.kt  DesktopUI.kt  FirewallCli.kt  FirewallHelper.kt  IpcClient.kt  IpcServer.kt  Main.kt  SettingsManager.kt  UpdateChecker.kt  WfasAuth.kt  WfasCrypto.kt  strings.kt
src/main/kotlin/dsp/: NoiseReducer.kt
src/main/native/: CMakeLists.txt  audio_engine.c  audio_engine_mac.m
src/main/resources/: app_icon.icns  fred.ans  strings.properties  strings_it.properties  third_party_licenses.txt  version.properties
src/main/resources/man/: wfas.1
